<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp"
    tools:context=".fragments.NewsDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/like"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_like_line_"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorAccent"
            android:text="@string/like"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/comment"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/ic_comment"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorAccent"
            android:text="@string/_0"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/content"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/source"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/more_info" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/more_info"
            style="@style/TextViewColoredStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/click_here_to_know_more"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="italic"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/source"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/source" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="start"
            android:maxLines="2"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/like"
            app:layout_constraintTop_toBottomOf="@+id/like" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dislike"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_dislike_line_"
            android:drawablePadding="5dp"
            android:drawableTint="@color/colorAccent"
            android:text="@string/dislike"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/like"
            app:layout_constraintTop_toBottomOf="@+id/image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>